--- a/public/en/cases.html
+++ b/public/en/cases.html
@@ -56,7 +56,9 @@
         <div class="mob-nav"></div>
         <section class="use-cases section">
           <div class="container">
-            <div class="h1 title-section">Use cases<span class="subtitle-section">Here are examples of using the Save To Future service in real life</span></div>
+            <div class="header-section">
+              <h1 class="title-section">Use cases</h1><span class="subtitle-section">Here are examples of using the Save To Future service in real life</span>
+            </div>
             <div class="cases">
               <div class="acc">
                 <div class="acc__item">
