--- a/public/en/faq.html
+++ b/public/en/faq.html
@@ -56,7 +56,9 @@
         <div class="mob-nav"></div>
         <section class="faq section">
           <div class="container">
-            <div class="h1 title-section">Have any questions?<span class="subtitle-section">If you have any questions, enter what you are looking for!</span></div>
+            <div class="header-section"><img class="header-section__img" src="../img/faq_header.svg" alt="FAQ">
+              <h1 class="title-section">Have any questions?</h1><span class="subtitle-section">If you have any questions, enter what you are looking for!</span>
+            </div>
             <div class="cases">
               <div class="acc">
                 <div class="acc__item">
@@ -72,53 +74,151 @@
                   <div class="acc__panel js-acc-panel">
                     <div class="acc__panel-inner">
                       <div class="acc">
-                        <div class="acc__item js-acc-control">
-                          <h3 class="acc__panel-title">Can I edit some files that I saved in a secure capsule?</h3>
+                        <div class="js-acc-control">
+                          <h3 class="faq__question">Can I edit some files that I saved in a secure capsule?</h3>
                         </div>
                         <div class="acc__panel js-acc-panel">
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et aliquam ultrices ipsum diam massa, magna. Mollis dis eget elementum nibh porttitor quis. Libero interdum orci arcu risus, rhoncus. Semper urna nisl convallis eget tempor aliquam lectus enim feugiat. Sed nisl imperdiet at egestas ultricies feugiat id egestas augue.  Et aliquam ultrices ipsum diam massa, magna. Mollis dis eget elementum nibh porttitor quis.</p>
                         </div>
-                        <div class="acc__item js-acc-control">
-                          <h3 class="acc__panel-title">Can I replace some files that I saved in a secure capsule?</h3>
+                        <div class="js-acc-control">
+                          <h3 class="faq__question">Can I replace some files that I saved in a secure capsule?</h3>
                         </div>
                         <div class="acc__panel js-acc-panel">
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et aliquam ultrices ipsum diam massa, magna. Mollis dis eget elementum nibh porttitor quis. Libero interdum orci arcu risus, rhoncus. Semper urna nisl convallis eget tempor aliquam lectus enim feugiat. Sed nisl imperdiet at egestas ultricies feugiat id egestas augue.  Et aliquam ultrices ipsum diam massa, magna. Mollis dis eget elementum nibh porttitor quis.</p>
                         </div>
-                        <div class="acc__item js-acc-control">
-                          <h3 class="acc__panel-title">Can I delete some files from my secure capsule?</h3>
+                        <div class="js-acc-control">
+                          <h3 class="faq__question">Can I delete some files from my secure capsule?</h3>
                         </div>
                         <div class="acc__panel js-acc-panel">
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et aliquam ultrices ipsum diam massa, magna. Mollis dis eget elementum nibh porttitor quis. Libero interdum orci arcu risus, rhoncus. Semper urna nisl convallis eget tempor aliquam lectus enim feugiat. Sed nisl imperdiet at egestas ultricies feugiat id egestas augue.  Et aliquam ultrices ipsum diam massa, magna. Mollis dis eget elementum nibh porttitor quis.</p>
                         </div>
-                        <div class="acc__item js-acc-control">
-                          <h3 class="acc__panel-title">Can I add more files into my existing secure capsule?</h3>
+                        <div class="js-acc-control">
+                          <h3 class="faq__question">Can I add more files into my existing secure capsule?</h3>
                         </div>
                         <div class="acc__panel js-acc-panel">
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et aliquam ultrices ipsum diam massa, magna. Mollis dis eget elementum nibh porttitor quis. Libero interdum orci arcu risus, rhoncus. Semper urna nisl convallis eget tempor aliquam lectus enim feugiat. Sed nisl imperdiet at egestas ultricies feugiat id egestas augue.  Et aliquam ultrices ipsum diam massa, magna. Mollis dis eget elementum nibh porttitor quis.</p>
                         </div>
-                        <div class="acc__item js-acc-control">
-                          <h3 class="acc__panel-title">How to edit settings for a secure capsule?</h3>
+                        <div class="js-acc-control">
+                          <h3 class="faq__question">How to edit settings for a secure capsule?</h3>
                         </div>
                         <div class="acc__panel js-acc-panel">
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et aliquam ultrices ipsum diam massa, magna. Mollis dis eget elementum nibh porttitor quis. Libero interdum orci arcu risus, rhoncus. Semper urna nisl convallis eget tempor aliquam lectus enim feugiat. Sed nisl imperdiet at egestas ultricies feugiat id egestas augue.  Et aliquam ultrices ipsum diam massa, magna. Mollis dis eget elementum nibh porttitor quis.</p>
                         </div>
-                        <div class="acc__item js-acc-control">
-                          <h3 class="acc__panel-title">I forgot my codeword. Can I restore it?</h3>
+                        <div class="js-acc-control">
+                          <h3 class="faq__question">I forgot my codeword. Can I restore it?</h3>
                         </div>
                         <div class="acc__panel js-acc-panel">
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et aliquam ultrices ipsum diam massa, magna. Mollis dis eget elementum nibh porttitor quis. Libero interdum orci arcu risus, rhoncus. Semper urna nisl convallis eget tempor aliquam lectus enim feugiat. Sed nisl imperdiet at egestas ultricies feugiat id egestas augue.  Et aliquam ultrices ipsum diam massa, magna. Mollis dis eget elementum nibh porttitor quis.</p>
                         </div>
-                        <div class="acc__item js-acc-control">
-                          <h3 class="acc__panel-title">Can I permanently delete my secure capsule?</h3>
+                        <div class="js-acc-control">
+                          <h3 class="faq__question">Can I permanently delete my secure capsule?</h3>
                         </div>
                         <div class="acc__panel js-acc-panel">
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et aliquam ultrices ipsum diam massa, magna. Mollis dis eget elementum nibh porttitor quis. Libero interdum orci arcu risus, rhoncus. Semper urna nisl convallis eget tempor aliquam lectus enim feugiat. Sed nisl imperdiet at egestas ultricies feugiat id egestas augue.  Et aliquam ultrices ipsum diam massa, magna. Mollis dis eget elementum nibh porttitor quis.</p>
                         </div>
-                        <div class="acc__item js-acc-control">
-                          <h3 class="acc__panel-title">If I deleted a secure capsule, what will happen with files that was locked in that secure capsule?</h3>
+                        <div class="js-acc-control">
+                          <h3 class="faq__question">If I deleted a secure capsule, what will happen with files that was locked in that secure capsule?</h3>
                         </div>
                         <div class="acc__panel js-acc-panel">
                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et aliquam ultrices ipsum diam massa, magna. Mollis dis eget elementum nibh porttitor quis. Libero interdum orci arcu risus, rhoncus. Semper urna nisl convallis eget tempor aliquam lectus enim feugiat. Sed nisl imperdiet at egestas ultricies feugiat id egestas augue.  Et aliquam ultrices ipsum diam massa, magna. Mollis dis eget elementum nibh porttitor quis.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="acc__item">
+                  <div class="acc__header js-acc-control">
+                    <div class="acc__header-img"><img src="../img/ico/faq_2.svg" alt="Storage period, Events for opening secure capsule, and Execution of your instructions"></div>
+                    <h2 class="acc__header-title">Storage period, Events for opening secure capsule, and Execution of your instructions</h2>
+                    <div class="acc__control-ico">
+                      <svg class="ico ico-mono-arrow">
+                        <use xlink:href="../img/sprite-mono.svg#ico-mono-arrow"></use>
+                      </svg>
+                    </div>
+                  </div>
+                  <div class="acc__panel js-acc-panel">
+                    <div class="acc__panel-inner">
+                      <div class="acc">
+                        <div class="js-acc-control">
+                          <h3 class="faq__question">Question?</h3>
+                        </div>
+                        <div class="acc__panel js-acc-panel">
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                        <div class="js-acc-control">
+                          <h3 class="faq__question">Question?</h3>
+                        </div>
+                        <div class="acc__panel js-acc-panel">
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="acc__item">
+                  <div class="acc__header js-acc-control">
+                    <div class="acc__header-img"><img src="../img/ico/faq_3.svg" alt="Data Security, Privacy, Integrity and Reliability"></div>
+                    <h2 class="acc__header-title">Data Security, Privacy, Integrity and Reliability</h2>
+                    <div class="acc__control-ico">
+                      <svg class="ico ico-mono-arrow">
+                        <use xlink:href="../img/sprite-mono.svg#ico-mono-arrow"></use>
+                      </svg>
+                    </div>
+                  </div>
+                  <div class="acc__panel js-acc-panel">
+                    <div class="acc__panel-inner">
+                      <div class="acc">
+                        <div class="js-acc-control">
+                          <h3 class="faq__question">Question?</h3>
+                        </div>
+                        <div class="acc__panel js-acc-panel">
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="acc__item">
+                  <div class="acc__header js-acc-control">
+                    <div class="acc__header-img"><img src="../img/ico/faq_4.svg" alt="Payments and Pricing"></div>
+                    <h2 class="acc__header-title">Payments and Pricing</h2>
+                    <div class="acc__control-ico">
+                      <svg class="ico ico-mono-arrow">
+                        <use xlink:href="../img/sprite-mono.svg#ico-mono-arrow"></use>
+                      </svg>
+                    </div>
+                  </div>
+                  <div class="acc__panel js-acc-panel">
+                    <div class="acc__panel-inner">
+                      <div class="acc">
+                        <div class="js-acc-control">
+                          <h3 class="faq__question">Question?</h3>
+                        </div>
+                        <div class="acc__panel js-acc-panel">
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="acc__item">
+                  <div class="acc__header js-acc-control">
+                    <div class="acc__header-img"><img src="../img/ico/faq_5.svg" alt="Support and Corporate Information"></div>
+                    <h2 class="acc__header-title">Support and Corporate Information</h2>
+                    <div class="acc__control-ico">
+                      <svg class="ico ico-mono-arrow">
+                        <use xlink:href="../img/sprite-mono.svg#ico-mono-arrow"></use>
+                      </svg>
+                    </div>
+                  </div>
+                  <div class="acc__panel js-acc-panel">
+                    <div class="acc__panel-inner">
+                      <div class="acc">
+                        <div class="js-acc-control">
+                          <h3 class="faq__question">Question?</h3>
+                        </div>
+                        <div class="acc__panel js-acc-panel">
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         </div>
                       </div>
                     </div>
