--- a/public/en/index.html
+++ b/public/en/index.html
@@ -77,7 +77,9 @@
         <section class="section section--full">
           <div class="service">
             <div class="container">
-              <h2 class="title-section">What is the SaveToFuture service?</h2>
+              <div class="header-section">
+                <h2 class="title-section">What is the SaveToFuture service?</h2>
+              </div>
               <div class="slider swiper-container js-service-slider">
                 <div class="swiper-pagination"></div>
                 <div class="swiper-wrapper">
@@ -131,7 +133,9 @@
         <section class="section section--full section--dark">
           <div class="cases">
             <div class="container">
-              <h2 class="title-section">Use cases<span class="subtitle-section">Why do you need the SaveToFuture service?</span></h2>
+              <div class="header-section">
+                <h2 class="title-section">Use cases</h2><span class="subtitle-section">Why do you need the SaveToFuture service?</span>
+              </div>
               <div class="card-list">
                 <div class="card">
                   <div class="card__cnt">
@@ -176,7 +180,9 @@
           <div class="work">
             <div class="container">
               <div class="work__wrap">
-                <h2 class="title-section">How it works?</h2>
+                <div class="header-section">
+                  <h2 class="title-section">How it works?</h2>
+                </div>
                 <div class="work-list">
                   <div class="work-list__item">
                     <div class="work-list__txt-wrap">
@@ -241,7 +247,7 @@
                 <div class="card__txt">More encrypted than cloud storage</div>
                 <div class="btn btn--fill card__btn">Get started</div>
               </div>
-              <div class="card__img"><img src="../img/content/footer-banner.png" alt="Deliver your data to the future safely and securely"></div>
+              <div class="card__img card__img--outer"><img src="../img/content/footer-banner.png" alt="Deliver your data to the future safely and securely"></div>
             </div>
           </div>
         </section>
