--- a/public/en/pricing.html
+++ b/public/en/pricing.html
@@ -56,7 +56,9 @@
         <div class="mob-nav"></div>
         <section class="pricing section">
           <div class="container">
-            <div class="h1 title-section">Pricing<span class="subtitle-section">Price for secure capsule is based on total size of files that you want to close in it</span></div>
+            <div class="header-section">
+              <h1 class="title-section">Pricing</h1><span class="subtitle-section">Price for secure capsule is based on total size of files that you want to close in it</span>
+            </div>
             <div class="price-carts">
               <div class="price-cart">
                 <div class="price-cart__img"><img src="../img/pricing-card-0.svg" alt=""></div>
@@ -78,7 +80,9 @@
         </section>
         <section class="reduction section">
           <div class="container">
-            <div class="h2 title-section">Price reduction<span class="subtitle-section">Price discount is based on secure capsule storage duration</span></div>
+            <div class="header-section">
+              <h2 class="title-section">Price reduction</h2><span class="subtitle-section">Price discount is based on secure capsule storage duration</span>
+            </div>
             <div class="reduction__items">
               <div class="reduction__item">
                 <div class="reduction__title">From 1 to 2 years</div>
@@ -101,7 +105,9 @@
         </section>
         <section class="courier section">
           <div class="container">
-            <div class="h2 title-section">Courier service<span class="subtitle-section">Delivery of data with express courier service </span></div>
+            <div class="header-section">
+              <h2 class="title-section">Courier service</h2><span class="subtitle-section">Delivery of data with express courier service </span>
+            </div>
             <div class="courier__list"><img src="../img/logo_DHL.svg" alt="DHL"><img src="../img/logo_FedEx.svg" alt="FedEx"><img src="../img/logo_UPS.svg" alt="UPS"></div>
             <div class="courier__txt">
               <p>The cost of data delivery by courier - 150$</p>
@@ -111,7 +117,9 @@
         </section>
         <section class="calc section">
           <div class="container">
-            <div class="h2 title-section">Calculate the cost of the secure capsule</div>
+            <div class="header-section">
+              <h2 class="title-section">Calculate the cost of the secure capsule</h2>
+            </div>
             <form class="calc-form" action="" name="calc">
               <div class="calc-form__left">
                 <div class="calc-form__title">Size of your data to be saved in Secure Capsule</div>
@@ -160,7 +168,9 @@
         </section>
         <section class="price-included section">
           <div class="container">
-            <div class="h2 title-section">What is included in the price?</div>
+            <div class="header-section">
+              <h2 class="title-section">What is included in the price?</h2>
+            </div>
             <ul class="ul-list">
               <li class="ul-list__item">Storing your files fully encrypted with the best encryption algorithms</li>
               <li class="ul-list__item">Absence of encryption keys in online</li>
