--- a/public/ru/cases.html
+++ b/public/ru/cases.html
@@ -49,9 +49,9 @@
                   </svg>
                 </div>
                 <div class="lang-swith__list">
-                  <div class="lang-swith__item" data-lang="en"><span class="flag"><img src="../img/flags/EN.svg"/></span>en
+                  <div class="lang-swith__item" data-lang="en"><span class="flag"><img src="../img/flags/BY.svg"/></span>en
                   </div>
-                  <div class="lang-swith__item" data-lang="ru"><span class="flag"><img src="../img/flags/RU.svg"/></span>ru
+                  <div class="lang-swith__item" data-lang="ru"><span class="flag"><img src="../img/flags/BY.svg"/></span>ru
                   </div>
                 </div>
               </div>
@@ -275,21 +275,27 @@
               </div>
               <div class="footer-page__contact">
                 <h3 class="footer-title">Контакты</h3>
-                <p><a href="mailTo: #{$i18n.glob.contacts.mail}">1111@gmail.com</a></p>
+                <p><a href="mailTo: #{$i18n.glob.contacts.mail}">support@savetofuture.com</a></p>
                 <p><a href="tel: #{$i18n.glob.contacts.tel}">+ 000 00 000 000</a></p>
-                <p>242733, Ryazan region, G. Spas-Klepiki, st. Kuibyshev, 42-22</p>
+                <p>TIMESOFT, INC. registered at Delaware, US</p>
               </div>
             </div>
             <div class="footer-page__soc">
-              <div class="soc"><a class="soc__link" href=" #{$i18n.glob.soc.twitter}">
+              <div class="soc"><a class="soc__link" href="https://twitter.com/savetofuture" target="_blank">
                   <svg class="ico ico-mono-soc-tw">
                     <use xlink:href="../img/sprite-mono.svg#ico-mono-soc-tw"></use>
-                  </svg></a><a class="soc__link" href=" #{$i18n.glob.soc.facebook}">
+                  </svg></a><a class="soc__link" href="https://www.facebook.com/savetofuture" target="_blank">
                   <svg class="ico ico-mono-soc-fb">
                     <use xlink:href="../img/sprite-mono.svg#ico-mono-soc-fb"></use>
-                  </svg></a><a class="soc__link" href=" #{$i18n.glob.soc.youtube}">
+                  </svg></a><a class="soc__link" href="https://www.linkedin.com/company/savetofuture/" target="_blank">
+                  <svg class="ico ico-mono-soc-linkedin">
+                    <use xlink:href="../img/sprite-mono.svg#ico-mono-soc-linkedin"></use>
+                  </svg></a><a class="soc__link" href="https://www.youtube.com/channel/UCiHkqSUHfTiJV8K7NxsztRg/videos" target="_blank">
                   <svg class="ico ico-mono-soc-youtube">
                     <use xlink:href="../img/sprite-mono.svg#ico-mono-soc-youtube"></use>
+                  </svg></a><a class="soc__link" href="https://t.me/savetofuture" target="_blank">
+                  <svg class="ico ico-mono-soc-telegram">
+                    <use xlink:href="../img/sprite-mono.svg#ico-mono-soc-telegram"></use>
                   </svg></a></div>
             </div>
             <div class="copyright">	&copy; SaveToFuture <span id="copy-year">2020</span>. All rights reserved</div>
@@ -299,5 +305,26 @@
     </div>
   </body>
   <script src="../js/vendor.js"></script>
-  <script src="../js/case.js"></script>
+  <script src="../js/case.js"></script><!-- Global site tag (gtag.js) - Google Analytics -->
+<script
+  async
+  src="https://www.googletagmanager.com/gtag/js?id=UA-180090818-1"
+></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag("js", new Date());
+
+  gtag("config", "UA-180090818-1");
+</script>
+
+<!-- Start of TIDIO script -->
+<script
+  src="//code.tidio.co/nvexqepwm02pou7ytvldtgq1molmtyqz.js"
+  async
+></script>
+<!-- End of TIDIO script -->
+
 </html>
