--- a/public/ru/index.html
+++ b/public/ru/index.html
@@ -49,9 +49,9 @@
                   </svg>
                 </div>
                 <div class="lang-swith__list">
-                  <div class="lang-swith__item" data-lang="en"><span class="flag"><img src="../img/flags/EN.svg"/></span>en
+                  <div class="lang-swith__item" data-lang="en"><span class="flag"><img src="../img/flags/BY.svg"/></span>en
                   </div>
-                  <div class="lang-swith__item" data-lang="ru"><span class="flag"><img src="../img/flags/RU.svg"/></span>ru
+                  <div class="lang-swith__item" data-lang="ru"><span class="flag"><img src="../img/flags/BY.svg"/></span>ru
                   </div>
                 </div>
               </div>
@@ -70,7 +70,7 @@
                     <h1 class="card__title">Deliver your data to the future safely and securely</h1><span class="separator"></span>
                     <div class="card__txt">
                       <p>More encrypted than cloud storage</p>
-                    </div><a class="btn btn--fill card__btn" href="#">Get started
+                    </div><a class="btn btn--fill card__btn" href="https://app.savetofuture.com" target="_blank">Get started
                       <svg class="ico ico-mono-arrow-right">
                         <use xlink:href="../img/sprite-mono.svg#ico-mono-arrow-right"></use>
                       </svg></a>
@@ -82,7 +82,7 @@
           </div>
         </section>
         <section class="section section--full">
-          <div class="service">
+          <div class="service" id="about">
             <div class="container">
               <div class="header-section">
                 <h2 class="title-section">What is the SaveToFuture service?</h2>
@@ -132,7 +132,7 @@
                 </div>
               </div>
               <footer class="section-footer">
-                <div class="btn-wrap"><a class="btn btn--outline" href="">Get started</a></div>
+                <div class="btn-wrap"><a class="btn btn--fill" href="https://app.savetofuture.com" target="_blank">Get started</a></div>
               </footer>
             </div>
           </div>
@@ -178,13 +178,13 @@
                 </div>
               </div>
               <footer class="section-footer">
-                <div class="section-footer__txt">There are many other cases for which the SaveToFuture service is essential</div><a class="btn btn--outline" href="">MORE USE CASES</a>
+                <div class="section-footer__txt">There are many other cases for which the SaveToFuture service is essential</div><a class="btn btn--outline" href="./cases.html">MORE USE CASES</a>
               </footer>
             </div>
           </div>
         </section>
         <section class="section section--full">
-          <div class="work">
+          <div class="work" id="works">
             <div class="container">
               <div class="work__wrap">
                 <div class="header-section">
@@ -249,12 +249,14 @@
             <div class="card">
               <div class="card__cnt">
                 <div class="card__title-wrap">
-                  <h3 class="card__title">Deliver your data to the future safely and securely</h3><span class="separator"></span>
+                  <h3 class="card__title">Use the SaveToFuture service right now</h3><span class="separator"></span>
                 </div>
-                <div class="card__txt">More encrypted than cloud storage</div>
-                <div class="btn btn--fill card__btn">Get started</div>
+                <div class="card__txt">Create your first secure capsule</div><a class="btn btn--fill card__btn" href="https://app.savetofuture.com" target="_blank">Get started
+                  <svg class="ico ico-mono-arrow-right">
+                    <use xlink:href="../img/sprite-mono.svg#ico-mono-arrow-right"></use>
+                  </svg></a>
               </div>
-              <div class="card__img card__img--outer"><img src="../img/content/footer-banner.png" alt="Deliver your data to the future safely and securely"></div>
+              <div class="card__img card__img--outer"><img src="../img/content/footer-banner.png" alt="Use the SaveToFuture service right now"></div>
             </div>
           </div>
         </section>
@@ -294,21 +296,27 @@
               </div>
               <div class="footer-page__contact">
                 <h3 class="footer-title">Контакты</h3>
-                <p><a href="mailTo: #{$i18n.glob.contacts.mail}">1111@gmail.com</a></p>
+                <p><a href="mailTo: #{$i18n.glob.contacts.mail}">support@savetofuture.com</a></p>
                 <p><a href="tel: #{$i18n.glob.contacts.tel}">+ 000 00 000 000</a></p>
-                <p>242733, Ryazan region, G. Spas-Klepiki, st. Kuibyshev, 42-22</p>
+                <p>TIMESOFT, INC. registered at Delaware, US</p>
               </div>
             </div>
             <div class="footer-page__soc">
-              <div class="soc"><a class="soc__link" href=" #{$i18n.glob.soc.twitter}">
+              <div class="soc"><a class="soc__link" href="https://twitter.com/savetofuture" target="_blank">
                   <svg class="ico ico-mono-soc-tw">
                     <use xlink:href="../img/sprite-mono.svg#ico-mono-soc-tw"></use>
-                  </svg></a><a class="soc__link" href=" #{$i18n.glob.soc.facebook}">
+                  </svg></a><a class="soc__link" href="https://www.facebook.com/savetofuture" target="_blank">
                   <svg class="ico ico-mono-soc-fb">
                     <use xlink:href="../img/sprite-mono.svg#ico-mono-soc-fb"></use>
-                  </svg></a><a class="soc__link" href=" #{$i18n.glob.soc.youtube}">
+                  </svg></a><a class="soc__link" href="https://www.linkedin.com/company/savetofuture/" target="_blank">
+                  <svg class="ico ico-mono-soc-linkedin">
+                    <use xlink:href="../img/sprite-mono.svg#ico-mono-soc-linkedin"></use>
+                  </svg></a><a class="soc__link" href="https://www.youtube.com/channel/UCiHkqSUHfTiJV8K7NxsztRg/videos" target="_blank">
                   <svg class="ico ico-mono-soc-youtube">
                     <use xlink:href="../img/sprite-mono.svg#ico-mono-soc-youtube"></use>
+                  </svg></a><a class="soc__link" href="https://t.me/savetofuture" target="_blank">
+                  <svg class="ico ico-mono-soc-telegram">
+                    <use xlink:href="../img/sprite-mono.svg#ico-mono-soc-telegram"></use>
                   </svg></a></div>
             </div>
             <div class="copyright">	&copy; SaveToFuture <span id="copy-year">2020</span>. All rights reserved</div>
@@ -318,5 +326,26 @@
     </div>
   </body>
   <script src="../js/vendor.js"></script>
-  <script src="../js/index.js"></script>
+  <script src="../js/index.js"></script><!-- Global site tag (gtag.js) - Google Analytics -->
+<script
+  async
+  src="https://www.googletagmanager.com/gtag/js?id=UA-180090818-1"
+></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag("js", new Date());
+
+  gtag("config", "UA-180090818-1");
+</script>
+
+<!-- Start of TIDIO script -->
+<script
+  src="//code.tidio.co/nvexqepwm02pou7ytvldtgq1molmtyqz.js"
+  async
+></script>
+<!-- End of TIDIO script -->
+
 </html>
