--- a/public/en/index.html
+++ b/public/en/index.html
@@ -244,19 +244,21 @@
             </div>
           </div>
         </section>
-        <section class="section section--full">
-          <div class="container">
-            <div class="card">
-              <div class="card__cnt">
-                <div class="card__title-wrap">
-                  <h3 class="card__title">Use the SaveToFuture service right now</h3><span class="separator"></span>
+        <section class="section">
+          <div class="index-use">
+            <div class="container">
+              <div class="card">
+                <div class="card__cnt">
+                  <div class="card__title-wrap">
+                    <h3 class="card__title">Use the SaveToFuture service right now</h3><span class="separator"></span>
+                  </div>
+                  <div class="card__txt">Create your first secure capsule</div><a class="btn btn--fill card__btn" href="https://app.savetofuture.com" target="_blank">Get started
+                    <svg class="ico ico-mono-arrow-right">
+                      <use xlink:href="../img/sprite-mono.svg#ico-mono-arrow-right"></use>
+                    </svg></a>
                 </div>
-                <div class="card__txt">Create your first secure capsule</div><a class="btn btn--fill card__btn" href="https://app.savetofuture.com" target="_blank">Get started
-                  <svg class="ico ico-mono-arrow-right">
-                    <use xlink:href="../img/sprite-mono.svg#ico-mono-arrow-right"></use>
-                  </svg></a>
+                <div class="card__img card__img--outer"><img src="../img/content/footer-banner.png" alt="Use the SaveToFuture service right now"></div>
               </div>
-              <div class="card__img card__img--outer"><img src="../img/content/footer-banner.png" alt="Use the SaveToFuture service right now"></div>
             </div>
           </div>
         </section>
